smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/doc-targets/docs-trailing-in-member.smithy
// Parse error at line 6, column 4 near `/// Hello!`: Documentation cannot be applied to `}`
namespace foo.baz

structure Foo {
   baz: String,
   /// Hello!
}
